--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,6 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "firebase": "^9.10.0",
-    "stripe": "^10.12.0"
+    "express": "^4.18.1"
   }
 }
